# OnvifSoapLib

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autogen.bat  bootstrap.sh  configure.ac  libonvifsoap.la.in  onvifsoap.pc.in
example/: CMakeLists.txt  client-test.c  disco-test.c  udp-test.c
src/: SoapObject.c  SoapObject.h  SoapObject_local.h  client-test.c  client.c  client.h  ip_match.c  ip_match.h  onvif_base_service.c  onvif_base_service.h  onvif_base_service_local.h  onvif_credentials.c  onvif_credentials.h  onvif_device.c  onvif_device.h  onvif_device_capabilities.h  onvif_device_capabilities_local.h  onvif_device_info.c  onvif_device_info_local.h  onvif_device_interface.c  onvif_device_interface.h  onvif_device_interface_local.h  onvif_device_profile.c  onvif_device_profile_local.h  onvif_device_scopes.c  onvif_device_scopes.h  onvif_device_scopes_local.h  onvif_device_service.c  onvif_device_service.h  onvif_list.c  onvif_list.h  onvif_media_profile.c  onvif_media_profile.h  onvif_media_profile_local.h  onvif_media_service.c  onvif_media_service.h  onvif_media_snapshot.c  onvif_media_snapshot.h  portable_thread.h  safe_namespace.h  (+3 more)
src/deviceio/: onvif_deviceio_audio_output_configuration_options.c  onvif_deviceio_audio_output_configuration_options.h  onvif_deviceio_audio_output_configuration_options_local.h  onvif_deviceio_service.c  onvif_deviceio_service.h  onvif_tokens.c  onvif_tokens.h  onvif_tokens_local.h
src/devicemgmt/: onvif_datetime.c  onvif_datetime.h  onvif_datetime_local.h  onvif_device_capabilities.c  onvif_device_capabilities.h  onvif_device_capabilities_local.h  onvif_device_datetime.c  onvif_device_datetime.h  onvif_device_datetime_local.h  onvif_device_hostnameinfo.c  onvif_device_hostnameinfo.h  onvif_device_hostnameinfo_local.h  onvif_device_info.c  onvif_device_info.h  onvif_device_info_local.h  onvif_device_interface.c  onvif_device_interface.h  onvif_device_interface_local.h  onvif_device_ntp.c  onvif_device_ntp.h  onvif_device_ntp_local.h  onvif_device_scopes.c  onvif_device_scopes.h  onvif_device_scopes_local.h  onvif_device_service.c  onvif_device_service.h  onvif_device_services.c  onvif_device_services.h  onvif_device_services_local.h  onvif_prefix_ip_address.c  onvif_prefix_ip_address.h  onvif_prefix_ip_address_local.h
src/discovery/: discovered_obj.c  discovered_obj.h  discoverer.c  discoverer.h  onvif_discovery.c  onvif_discovery.h  probmatch.c  probmatch.h  wsdd.nsmap
src/media/: onvif_media_audio_output_config.c  onvif_media_audio_output_config.h  onvif_media_audio_output_config_local.h  onvif_media_audio_output_config_options.c  onvif_media_audio_output_config_options.h  onvif_media_audio_output_config_options_local.h  onvif_media_audio_output_configs.c  onvif_media_audio_output_configs.h  onvif_media_audio_output_configs_local.h  onvif_media_audio_source_config.c  onvif_media_audio_source_config.h  onvif_media_audio_source_config_local.h  onvif_media_audio_source_configs.c  onvif_media_audio_source_configs.h  onvif_media_audio_source_configs_local.h  onvif_media_profile.c  onvif_media_profile.h  onvif_media_profile_local.h  onvif_media_profiles.c  onvif_media_profiles.h  onvif_media_service.c  onvif_media_service.h  onvif_media_service_capabilities.c  onvif_media_service_capabilities.h  onvif_media_service_capabilities_local.h  onvif_media_service_local.h  onvif_media_snapshot.c  onvif_media_snapshot.h  onvif_media_snapshot_local.h  onvif_media_snapshot_uri.c  onvif_media_snapshot_uri.h  onvif_media_snapshot_uri_local.h  onvif_media_uri.c  onvif_media_uri.h  onvif_media_uri_local.h  onvif_uri.c  onvif_uri.h  onvif_uri_local.h
src/media/media1/: onvif_media1_audio_output_config_options.c  onvif_media1_audio_output_config_options.h  onvif_media1_audio_output_config_options_local.h  onvif_media1_audio_output_configs.c  onvif_media1_audio_output_configs.h  onvif_media1_audio_output_configs_local.h  onvif_media1_audio_source_configs.c  onvif_media1_audio_source_configs.h  onvif_media1_audio_source_configs_local.h  onvif_media1_profile.c  onvif_media1_profile.h  onvif_media1_profile_local.h  onvif_media1_profiles.c  onvif_media1_profiles.h  onvif_media1_profiles_local.h  onvif_media1_service.c  onvif_media1_service.h  onvif_media1_service_capabilities.c  onvif_media1_service_capabilities.h  onvif_media1_service_capabilities_local.h  onvif_media1_uri.c  onvif_media1_uri.h  onvif_media1_uri_local.h
src/media/media2/: onvif_media2_audio_output_config_options.c  onvif_media2_audio_output_config_options.h  onvif_media2_audio_output_config_options_local.h  onvif_media2_audio_output_configs.c  onvif_media2_audio_output_configs.h  onvif_media2_audio_output_configs_local.h  onvif_media2_audio_source_configs.c  onvif_media2_audio_source_configs.h  onvif_media2_audio_source_configs_local.h  onvif_media2_profile.c  onvif_media2_profile.h  onvif_media2_profile_local.h  onvif_media2_profiles.c  onvif_media2_profiles.h  onvif_media2_profiles_local.h  onvif_media2_service.c  onvif_media2_service.h  onvif_media2_service_capabilities.c  onvif_media2_service_capabilities.h  onvif_media2_service_capabilities_local.h  onvif_media2_uri.c  onvif_media2_uri.h  onvif_media2_uri_local.h
subprojects/: CMakeLists.txt
wsdl/: generated.bat
wsdl/oasis-open/: b-2.xsd  bf-2.xsd
wsdl/onvif/schemas/: onvif.xsd
wsdl/onvif/wsdl/: advancedsecurity.wsdl  deviceio.wsdl  devicemgmt.wsdl  event.wsdl  imaging.wsdl  media.wsdl  media2.wsdl  ptz.wsdl  remotediscovery.wsdl
wsdl/w3/: xml.xsd
wsdl/xmlsoap/: ws-discovery.xsd
